# bmstu-oop

./: .gitignore
3DViewerQt/: CMakeLists.txt  uml.drawio
3DViewerQt/example/: scene.csv  scene.txt
3DViewerQt/inc/abstract-factory/: AbstractColor.h  AbstractFactoryRenderer.h  AbstractPainter.h  AbstractPen.h
3DViewerQt/inc/abstract-factory/Qt/: QtColor.h  QtFactoryRenderer.h  QtPainter.h  QtPen.h
3DViewerQt/inc/commands/: AbstractCommand.h
3DViewerQt/inc/commands/cameraCommands/: SetActiveCameraCommand.h
3DViewerQt/inc/commands/objectsCommands/: AddSceneObjectCommand.h  MoveCommand.h  RemoveSceneObjectCommand.h  RotateCommand.h  ScaleCommand.h  SelectSceneObjectCommand.h  UnselectSceneObjectCommand.h
3DViewerQt/inc/commands/sceneCommands/: LoadSceneCommand.h  RenderSceneCommand.h
3DViewerQt/inc/exceptions/: BaseException.h  InvalidStreamException.h  NotImplementedException.h  SolutionExceptions.h
3DViewerQt/inc/facade/: Facade.h
3DViewerQt/inc/loader/: ObjectSelector.h  SceneLoader.h  enums.h
3DViewerQt/inc/loader/cameraParser/: CameraParserExceptions.h
3DViewerQt/inc/loader/cameraParser/creators/: AbstractCameraParserCreator.h  CameraParserCSVCreator.h  CameraParserTXTCreator.h  CreatorAbstractCameraParserCreator.h
3DViewerQt/inc/loader/cameraParser/products/: AbstractCameraParser.h  (+2 more)
3DViewerQt/inc/loader/modelParser/: ModelParserExceptions.h
3DViewerQt/inc/loader/streamLoader/: AbstractStreamLoader.h  FileLoaderExceptions.h  StreamFileLoader.h
3DViewerQt/inc/managers/: AbstractManager.h  LoadManager.h  ManagerExceptions.h  RenderManager.h  SceneElementsManager.h  SceneManager.h  SelectManager.h  TransformManager.h
3DViewerQt/inc/managers/creation/: AbstractManagerCreator.h  CreatorManagerCreator.h  LoadManagerCreator.h  ManagerSolution.h  RenderManagerCreator.h  SceneElementsManagerCreator.h  SceneManagerCreator.h  SelectManagerCreator.h  TransformManagerCreator.h
3DViewerQt/inc/matrixContainer/exceptions/: IteratorExceptions.h  MatrixExceptions.h
3DViewerQt/inc/matrixContainer/iterators/: AbstractMatrixIterator.h  MatrixConstIterator.h  MatrixConstReverseIterator.h  MatrixIterator.h  MatrixReverseIterator.h
3DViewerQt/inc/matrixContainer/matrix/: AbstractMatrix.h  Matrix.h
3DViewerQt/inc/model/: Edge.h  Model.h  PlainCamera.h  Point.h
3DViewerQt/inc/model/implementation/: AbstractModelImplementation.h  EdgeListModelImplementation.h  MatrixModelImplementation.h  PlainCameraImplementation.h
3DViewerQt/inc/objects/: AbstractObject.h  Camera.h  Highlight.h  Object.h
3DViewerQt/inc/scene/: AbstractScene.h  Scene.h
3DViewerQt/inc/visitors/: AbstractVisitor.h  ProjectionVisitor.h  RenderVisitor.h  TransformVisitor.h
3DViewerQt/src/: main.cpp
3DViewerQt/src/abstract-factory/: AbstractColor.cpp  AbstractFactoryRenderer.cpp  AbstractPainter.cpp  AbstractPen.cpp
3DViewerQt/src/abstract-factory/Qt/: QtColor.cpp  QtFactoryRenderer.cpp  QtPainter.cpp  QtPen.cpp
3DViewerQt/src/facade/: Facade.cpp
3DViewerQt/src/loader/: ObjectSelector.cpp  SceneLoader.cpp
3DViewerQt/src/loader/cameraParser/: AbstractCameraParser.cpp  AbstractCameraParserCreator.cpp  CameraParserCSV.cpp  CameraParserSolution.cpp  CameraParserTXT.cpp
3DViewerQt/src/loader/modelParser/: AbstractModelParser.cpp  AbstractModelParserCreator.cpp  ModelParserCSV.cpp  ModelParserSolution.cpp  ModelParserTXT.cpp
3DViewerQt/src/loader/sceneParser/: AbstractSceneParser.cpp  AbstractSceneParserCreator.cpp  SceneParserCSV.cpp  SceneParserSolution.cpp  SceneParserTXT.cpp
3DViewerQt/src/loader/streamLoader/: AbstractFileLoader.cpp  AbstractFileLoaderCreator.cpp  AbstractStreamLoader.cpp  FileLoaderCSV.cpp  FileLoaderSolution.cpp  FileLoaderTXT.cpp  StreamFileLoader.cpp
3DViewerQt/src/managers/: AbstractManager.cpp  LoadManager.cpp  RenderManager.cpp  SceneElementsManager.cpp  SceneManager.cpp  SelectManager.cpp  TransformManager.cpp
3DViewerQt/src/managers/creation/: AbstractManagerCreator.cpp  ManagerSolution.cpp
3DViewerQt/src/matrixContainer/iterators/: AbstractMatrixIterator.cpp  MatrixIterator.hpp  MatrixReverseIterator.hpp
3DViewerQt/src/matrixContainer/matrix/: Matrix.hpp
3DViewerQt/src/model/: AbstractModelImplementation.cpp  Edge.cpp  EdgeListModelImplementation.cpp  MatrixModelImplementation.cpp  Model.cpp  PlainCameraImplementation.cpp  Point.cpp
3DViewerQt/src/objects/: AbstractObject.cpp  Camera.cpp  Highlight.cpp  Object.cpp
3DViewerQt/src/scene/: AbstractScene.cpp  Scene.cpp
3DViewerQt/src/ui/: MainWindow.cpp  MainWindow.hpp  mainwindow.ui  transformationConstants.h
3DViewerQt/src/visitors/: AbstractVisitor.cpp  ProjectionVisitor.cpp  RenderVisitor.cpp  TransformVisitor.cpp
3DViewerSDL/: CMakeLists.txt  compile_commands.json
3DViewerSDL/example/: chair.txt  cube.txt  cybertruck.txt  octahedron.txt  piano.txt  pyramid.txt  spacemarine_helmet.txt
3DViewerSDL/inc/: app.hpp  constants.hpp  errors.hpp  graph.hpp  graphics.hpp  handler.hpp  point.hpp  renderer.hpp  transform.hpp  transformGraph.hpp  utils.hpp  validators.hpp
3DViewerSDL/src/: app.cpp  graph.cpp  graphics.cpp  handler.cpp  main.cpp  point.cpp  renderer.cpp  transform.cpp  transformGraph.cpp  utils.cpp  validators.cpp
AsyncElevator/: CMakeLists.txt
AsyncElevator/inc/: Cabin.h  Controller.h  Doors.h  Elevator.h  Floor.h
AsyncElevator/src/: Cabin.cpp  Controller.cpp  Doors.cpp  Elevator.cpp  main.cpp
AsyncElevator/src/ui/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
MatrixTemplate/: CMakeLists.txt
MatrixTemplate/inc/concepts/: MatrixConcepts.h
MatrixTemplate/inc/exceptions/: BaseException.h  IteratorExceptions.h  MatrixExceptions.h
MatrixTemplate/inc/iterators/: BaseMatrixIterator.h  MatrixConstIterator.h  MatrixConstReverseIterator.h  MatrixIterator.h  MatrixReverseIterator.h
MatrixTemplate/inc/matrix/: BaseMatrix.h  Matrix.h
MatrixTemplate/src/cmd/: main.cpp
MatrixTemplate/src/iterators/: BaseMatrixIterator.cpp  MatrixConstIterator.hpp  MatrixConstReverseIterator.hpp  MatrixIterator.hpp  MatrixReverseIterator.hpp
MatrixTemplate/src/matrix/: Matrix.hpp
(+26 files in other folders)
